# task-management

./: .dockerignore  .env.example  DockerFile  Dockerfile  LICENCE.md  README.md  docker-compose.prod.yml  docker-compose.yml  load_tests.py  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0c48ad7f911c_add_users_table.py  257ad6689ecd_update_boards_table_to_add_column_.py  46a5b0bb844e_add_index_to_owner_id.py  4c3bcdb26b3d_initial_schema_with_uuids.py  57bad9017483_change_admin_for_owner_in_memberships.py  c75232f58aca_add_performance_indexes.py  d33407f7fb81_add_performance_indexes.py  efb775381ab3_initial_schema.py
app/: app.py
app/api/: auth.py  boards.py  projects.py  tasks.py
app/auth/: oauth2.py  passwords.py  roles.py
app/core/: config.py  dependencies.py  exceptions.py  exceptions_handlers.py  logger.py  pagination.py  rate_limit.py  redis.py  security.py
app/db/: db.py  db_session.py  dependencies.py  session.py
app/docs/: rbac.md  testing.md
app/models/: __init__.py  board.py  membership.py  project.py  task.py  user.py
app/schemas/: board_schema.py  membership_schema.py  pagination.py  project_schema.py  task_schema.py  user_schema.py
app/services/: auth_service.py  board_service.py  boards_service.py  membership_service.py  memberships.py  projects_service.py  projects_services.py  task_service.py
app/tests/: conftest.py  test_auth.py  test_boards.py  test_memberships.py  test_projects.py  test_tasks.py
app/tests/load/: load_tests.py
src/app/: app.py
src/app/api/: auth.py  projects.py  tasks.py
src/app/core/: config.py  dependencies.py  exceptions.py  pagination.py  rate_limit.py  redis.py  security.py
src/app/db/: session.py
src/app/docs/: architecture.md  endpoints.md  rbac.md  testing.md
src/app/models/: membership.py
(+12 files in other folders)
